Created a basic html page, with a search bar (not working) avatar and filter by with tick boxes, also added a filter scss page and a header scss page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,14 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "filter";
+@import "header";
+
+body {
+  background-color: #D2D1CF;
+}
+
+#filter-search-bar {
+  background-color: white;
+  box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
+}
