--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,1 +1,141 @@
-index.html.erb
+<div>
+  <header>
+    <h1>Gallery</h1>
+    <form id="search-bar" class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+  </header>
+
+  <body>
+    <div id="index-content" style="display:flex;">
+      <div id="filter-search-bar">
+        <form class="filter-box">
+          <h5>Style</h3>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Fine Art</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Modern</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Abstract Expressionism</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Expressionism</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Figurative</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Modern</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Abstract Expressionism</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Expressionism</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Figurative</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Realism</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Conceptual</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Portraiture</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Impressionism</label></p>
+          </div>
+        </form>
+
+        <form class="filter-box">
+          <h5>Subject</h3>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Abstract</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Landscape</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">People</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Portrait</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Nature</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Animal</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Women</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Floral</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Still Life</label></p>
+          </div>
+        </form>
+
+        <form class="filter-box">
+          <h5>Medium</h3>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Acrylic</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Oil</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Watercolor</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Ink</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Paint</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Spray Paint</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Gesso</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Gouache</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Paper</label></p>
+          </div>
+        </form>
+
+        <form class="filter-box">
+          <h5>Medium</h3>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Material</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Canvas</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Paper</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Wood</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Cardboard</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Soft</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Plastic</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Aluminium</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Glass</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Steel</label></p>
+          </div>
+        </form>
+
+        <form class="filter-box">
+          <h5>Price</h3>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Under £500</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">£500 - £1,000</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">£1,000 - £2,000</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">£2,000 - £5,000</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">£5,000 - £10,000</label></p>
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <p><label class="form-check-label" for="exampleCheck1">Over £10,000</label></p>
+        </form>
+      </div>
+    </div>
+
+  </body>
+</div>
+
