--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,1 +1,47 @@
-show.html.erb
+
+<div class="main-container">
+  <div class="art-photo">
+    <% if @art.photo.attached? %>
+      <%= cl_image_tag @art.photo.key %>
+    <% else %>
+      url('https://images.unsplash.com/photo-1497990902153-c6d041aad676?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1107&q=80')
+    <% end %>
+</div>
+<div class="product-shop">
+  <div class="name-section">
+    <h1><%= @art.artist %></h1>
+  </div>
+  <div class="price-info">
+    <div class="price-box">
+      <span class="price"><%= @art.price %></span>
+    </div>
+  </div>
+  <div class="info-wrapper">
+    <div class="art-info">
+      <p><%= @art.name %></p>
+      <p><%= @art.style %></p>
+    </div>
+  </div>
+  <div class="add_to_cart_buttons">
+    <button type="button" title="Add to bag" class="button-primary">
+      <span>Add to bag</span>
+    </button>
+    <div class="visit_see_link button-primary">
+      <span>More like this</span>
+    </div>
+  </div>
+</div>
+
+  </div>
+<div class="art-info">
+  <div class="art-infos">
+    <p class="header header_author">
+    About<%=@art.artist %>
+    </p>
+    <div class="content content_art">
+    <div class="content_bio">
+      <%= @art.description %>
+    </div>
+    </div>
+  </div>
+</div>
