--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,52 +1,26 @@
-<div class="container">
-  <div class="container">
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <%= link_to "#", class: "navbar-brand" do %>
-        <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-     <% end %>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
-  <div class="container m-4">
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <%= image_tag "https://source.unsplash.com/random", class: "" %>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/random')">
+        <div class="carousel-inner-1">
+          <%= link_to "Art", arts_path %>
         </div>
-        <div class="carousel-item">
-          <%= image_tag "https://source.unsplash.com/user/erondu/1600x900", class: "" %>
+      </div>
+      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/user/erondu/1600x900')">
+        <div class="carousel-inner-1">
+          <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
         </div>
-        <div class="carousel-item">
-          <%= image_tag "https://source.unsplash.com/user/erondu/daily", class: "" %>
-        </div>
+      </div>
+      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/user/erondu/daily')">
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -57,7 +31,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
+
 
   <div class="container row m-4">
     <div class="card" style="width: 18rem;">
@@ -65,7 +39,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
 
@@ -74,7 +50,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
 
@@ -83,7 +61,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
   </div>
@@ -95,7 +75,9 @@
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
 
@@ -103,7 +85,9 @@
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
 
@@ -111,7 +95,9 @@
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
 
@@ -119,7 +105,9 @@
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
 
@@ -127,8 +115,9 @@
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to arts_path do  %>
+            <div class="btn btn-primary">Show me the Art</div>
+          <% end %>
       </div>
     </div>
   </div>
-</div>
