--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "navbar";
 @import "filter";
 @import "header";
+@import "card";
 
 body {
   background-color: #D2D1CF;
@@ -12,4 +13,12 @@ body {
 #filter-search-bar {
   background-color: white;
   box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
+}
+
+#page-info {
+  margin: 16px;
+}
+
+.grid-container {
+  display: inline-grid;
 }
