--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,15 +12,16 @@ body {
   background-color: #D2D1CF;
 }
 
-#filter-search-bar {
-  background-color: white;
-  box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
-}
-
 #page-info {
-  margin: 16px;
+  margin: 32px;
 }
 
 .grid-container {
   display: inline-grid;
+}
+
+#line {
+  border: solid 2px black;
+  width: 900px;
+  margin: 24px;
 }
