--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,6 +15,7 @@ body {
 #filter-search-bar {
   background-color: white;
   box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
+}
 
 #page-info {
   margin: 32px;
