Update-purchase-link

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -4,11 +4,7 @@
   border-color: gray;
 }
 
-.list {
-  list-style-type: none;
-}
-
-.container {
+.container1 {
   background-color: #fff;
   width: 100%;
   height: 100vh;
