--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,16 +1,17 @@
 <h1><%= @art.name %></h1>
 
-  <%= simple_form_for(@art) do |f| %>
-    <%= f.input :name %>
+  <%= simple_form_for [@art, @purchase] do |f| %>
     <div class="form" style="display: flex; flex-direction: column;">
+      <label for="">Card Holder Name</label>
+      <input name="purchase[card_holder_name]" type="Card Number" placeholder="Enter Card Number">
       <label for="">Card Number</label>
-      <input type="Card Number" placeholder="Enter Card Number">
+      <input name="purchase[card_number]" type="Card Number" placeholder="Enter Card Number">
       <label for="" >Expiration Date</label>
-      <input type="Expiration" placeholder="MM / YY">
+      <input name="purchase[expiration_date]" type="Expiration" placeholder="MM / YY">
       <label for="" >Security Code (CVV)</label>
-      <input type="Expiration" placeholder="XXX">
+      <input name="purchase[security_code]" type="Expiration" placeholder="XXX">
     </div>
     <%= link_to 'Back', art_path(@art), class: "btn btn-primary mt-3 mr-4" %>
 
-    <%= f.submit class: "btn btn-primary mt-3" %>
+    <%= f.button :submit, class: "btn btn-primary mt-3" %>
   <% end %>
