--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,20 +12,21 @@ body {
   background-color: #D2D1CF;
 }
 
-#filter-search-bar {
-  background-color: white;
-  box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
+// #filter-search-bar {
+//   background-color: white;
+//   box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
+// }
 
-#page-info {
-  margin: 32px;
-}
+// #page-info {
+//   margin: 32px;
+// }
 
-.grid-container {
-  display: inline-grid;
-}
+// .grid-container {
+//   display: inline-grid;
+// }
 
-#line {
-  border: solid 2px black;
-  width: 900px;
-  margin: 24px;
-}
+// #line {
+//   border: solid 2px black;
+//   width: 900px;
+//   margin: 24px;
+// }
