--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,9 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <%= link_to "Register", new_user_registration_path, class:"btn btn-primary" %>
+  <%= link_to "Sign In", new_user_session_path, class:"btn btn-primary" %>
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
@@ -19,6 +22,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Profile", "#", class: "dropdown-item" %>
           <%= link_to "History", "#", class: "dropdown-item" %>
+          <%= link_to "Sign Out", destroy_user_session_path, class: "dropdown-item" %>
         </div>
       </li>
     </ul>
