added some stuff

--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -10,6 +10,6 @@
 }
 
 #filter-search-bar {
-  background-color: rgb(197, 197, 197);
+  background-color: rgb(197, 197, 197)!important;
   box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
 }
