--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -21,17 +21,8 @@ body {
   margin: 32px;
 }
 
-
-// #page-info {
-//   margin: 32px;
-// }
-
-// .grid-container {
-//   display: inline-grid;
-// }
-
-// #line {
-//   border: solid 2px black;
-//   width: 900px;
-//   margin: 24px;
-// }
+#line {
+  border: solid 2px black;
+  width: 900px;
+  margin: 24px;
+}
