--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 60px;
+  width: 200px;
 }
 
 #search-bar {
@@ -33,4 +33,9 @@
 #search-bar > input {
   width: 50%;
   margin: 0;
+}
+
+.logo {
+  height: 400px;
+  width: 800px;
 }
