fixed the style of the navbar, sign in and out is next to the avatar, the search is to the left of the sign in and out

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,7 +17,7 @@
 #search-bar {
   position: absolute;
   top: 35px!important;
-  right: 150px!important;
+  right: 370px!important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,11 +31,17 @@
 }
 
 #search-bar > input {
-  width: 50%;
+  width: 100%;
   margin: 0;
 }
 
 .logo {
   height: 400px;
   width: 800px;
+}
+
+.register-buttons {
+  position: absolute;
+  top: 35px!important;
+  right: 110px!important;
 }
