--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,19 +12,21 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <%= link_to "Register", new_user_registration_path, class:"btn btn-primary" %>
-  <%= link_to "Sign In", new_user_session_path, class:"btn btn-primary" %>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Profile", "#", class: "dropdown-item" %>
-          <%= link_to "History", "#", class: "dropdown-item" %>
-          <%= link_to "Sign Out", destroy_user_session_path, class: "dropdown-item" %>
-        </div>
-      </li>
-    </ul>
-  </div>
+  <% if user_signed_in? %>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Profile", "#", class: "dropdown-item" %>
+            <%= link_to "History", "#", class: "dropdown-item" %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"btn btn-primary" %>
+          </div>
+        </li>
+      </ul>
+    </div>
+  <% else %>
+    <%= link_to "Register", new_user_registration_path, class:"btn btn-primary" %>
+    <%= link_to "Sign In", new_user_session_path, class:"btn btn-primary" %>
+  <% end %>
 </div>
