--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -18,4 +18,7 @@
     <img src="<%= cl_image_path art.photo.key %>" alt="profile pic" style="width:100%" class="mb-4">
   <% end %>
 
+<%= link_to "Sell art", new_art_path, class:"btn btn-primary" %>
+
 </div>
+
