update card style2

--- a/app/assets/stylesheets/components/_myprofile.scss
+++ b/app/assets/stylesheets/components/_myprofile.scss
@@ -121,3 +121,19 @@ button:hover, a:hover {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
+.profile-purchase{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 16px;
+}
+
+.profile-sell{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 16px;
+}
+
+
+
+
