--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,6 @@
 <h2 class="m-4" style="text-align:center">Profile History</h2>
 
-<div class="card">
+<div class="card mb-4">
 
   <% if current_user.photo.attached? %>
     <img src="<%= cl_image_path current_user.photo.key %>" alt="profile pic" style="width:100%" class="mb-4">
@@ -37,9 +37,9 @@
     <% end %>
 
   <div class="profile-sell">
-    <h4>Sell Item</h4>
+    <h4>Listing Item</h4>
     <% if @arts_sell.count == 0 %>
-      <h5> You haven't purchased anything yet! </h5>
+      <h5> You haven't listed anything for sale yet! </h5>
       <% else %>
         <div class="profile-cards">
           <% @arts_sell.each do |art| %>
