changed home page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #D2D1CF;
+  background: white;
   box-shadow: 2px 2px 4px 0px rgba(141, 141, 141, 0.4);
   height: 96px;
   position: relative;
