--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -13,5 +13,23 @@
 }
 
 .carousel{
-  height: 40vh
+  height: 75vh
+}
+
+.carousel-photo-1{
+  background-image: url('filip-kominik-IHtVbLRjTZU-unsplash.jpg')
+}
+
+.carousel-photo-2{
+  background-image: url('jonny-caspari-KuudDjBHIlA-unsplash.jpg')
+}
+
+.carousel-photo-3{
+  background-image: url('leonardo-yip-QCVsZR6kfp4-unsplash.jpg')
+}
+
+.carousel-text{
+  color: white;
+  font-family: 'Pacifico', cursive;
+  font-size: 100px;
 }
